public abstract class Encryptor {
    public abstract String encrypt(String data);
    public abstract String decrypt(String data);
}
